<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.focus.activities.ListaDomicilios" >

    <TextView
        android:id="@+id/TV_MenuPrinc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:radius="10dp"
        android:text="@string/listDom"
        android:textColor="@color/white"
        android:textSize="@dimen/FVD_Titulo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/infoListaDom"
        android:textColor="#000000"
        android:textSize="18sp" 
        android:paddingBottom="10dp"/>
    
	<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/obsListaDom"
        android:textColor="#000000"
        android:textSize="18sp" 
        android:paddingBottom="15dp"/>

    <ListView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

    <Button
        android:id="@+id/BtnVoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_laranja_selector"
        android:onClick="voltarMenu"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/btnVoltarMenu"
        android:textColor="#000000"
        android:textSize="@dimen/Btn_Normal"
        android:textStyle="bold" />

</LinearLayout>